[package]
name = "rs1541fs"
version = "0.1.0"
edition = "2021"
authors = ["Piers Finlayson <piers@piersandkatie.com>"]
description = "1541fs - A native Linux filesystem for Commodore disk drives"

[lib]
name = "rs1541fs"
path = "src/lib/lib.rs"

[[bin]]
name = "1541fsd"
path = "src/bin/server/main.rs"

[[bin]]
name = "1541fs"
path = "src/bin/client/main.rs"

[dependencies]
fuser = "0.15"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
syslog = "7.0"
libc = "0.2"
signal-hook = "0.3"
parking_lot = "0.12"
array-init = "2.1"
lazy_static = "1.4"
daemonize = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
scopeguard = "1.2"
nix = "0.29"

[build-dependencies]
bindgen = "0.71"

[dev-dependencies]
tempfile = "3.8"
mockall = "0.13"